# leap-sec

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
docs/: AUDIT.md  DESIGN.md  DEVELOPER_EXPERIENCE.md  ROADMAP.md  VISION.md  landscape.md
docs/api/: Error.md  GpstNanos.md  GpstSeconds.md  LeapSeconds.md  LeapSecondsBuilder.md  README.md  TaiNanos.md  TaiSeconds.md  UtcUnixNanos.md  UtcUnixSeconds.md  expires_at.md  gpst_to_tai.md  gpst_to_tai_nanos.md  gpst_to_utc.md  gpst_to_utc_nanos.md  is_during_leap_second.md  is_expired.md  known.md  latest_entry.md  tai_to_gpst.md  tai_to_gpst_nanos.md  tai_to_utc.md  tai_to_utc_nanos.md  tai_utc_offset.md  tai_utc_offset_at_tai.md  utc_to_gpst.md  utc_to_gpst_nanos.md  utc_to_tai.md  utc_to_tai_nanos.md  valid_range.md
examples/: custom_table.rs  gps_time.rs  leap_second_detection.rs  nanoseconds.rs  quickstart.rs  table_inspection.rs
src/: builder.rs  convert.rs  error.rs  lib.rs  table.rs  types.rs
tests/: behavior.rs
